# SimpleHydraulicNetwork

./: CMakeLists.txt  Doxyfile  Heating_Cooling_data.csv  Heating_Cooling_data.xlsx  Heating_Cooling_data_copy.csv  LICENSE  README.md  main.cpp  matrix.csv
.github/workflows/: cmake.yml
HydraulicLib/: CMakeLists.txt
HydraulicLib/include/HydraulicLib/: ConvEigen.h  NetworkSolve.h  read_write.h
HydraulicLib/src/: NetworkSolve.cpp  NetworkSolve_test.cpp  main.cpp  read_write_test.cpp
include/: ConvEigen.h  conv.h  read_write.h
outputs/: flow.csv  flowQ.csv
test/: CMakeLists.txt
